plugins/core/src/snapshots/plugins_core__looking__tests__it_fails_to_look_inside_non_containers.snap
---
source: plugins/core/src/looking.rs
expression: reply.to_json()?
---
{
  "BasicReply": {
    "simple": "impossible"
  }
}
