plugins/core/src/snapshots/plugins_core__looking__tests__it_looks_in_area_with_items_on_ground_and_a_route.snap
---
source: plugins/core/src/looking.rs
expression: reply.to_json()?
---
{
  "basicReply": {
    "areaObservation": {
      "area": {
        "desc": null,
        "key": "E-2",
        "name": "Welcome Area",
        "qualified": "a Welcome Area"
      },
      "carrying": [],
      "items": [
        {
          "desc": null,
          "key": "E-3",
          "name": "Cool Rake",
          "qualified": "a Cool Rake"
        },
        {
          "desc": null,
          "key": "E-4",
          "name": "Boring Shovel",
          "qualified": "a Boring Shovel"
        },
        {
          "desc": null,
          "key": "E-5",
          "name": "East Exit",
          "qualified": "an East Exit"
        }
      ],
      "living": [
        {
          "desc": null,
          "key": "E-1",
          "name": "Living",
          "qualified": "a Living"
        }
      ],
      "person": {
        "desc": null,
        "key": "E-1",
        "name": "Living",
        "qualified": "a Living"
      },
      "routes": []
    }
  }
}
