plugins/core/src/snapshots/plugins_core__looking__tests__it_looks_in_empty_area.snap
---
source: plugins/core/src/looking.rs
expression: reply.to_json()?
---
{
  "basicReply": {
    "areaObservation": {
      "area": {
        "desc": null,
        "key": "E-1",
        "name": "Welcome Area",
        "qualified": "a Welcome Area"
      },
      "carrying": [],
      "items": [],
      "living": [
        {
          "desc": null,
          "key": "E-0",
          "name": "Living",
          "qualified": "a Living"
        }
      ],
      "person": {
        "desc": null,
        "key": "E-0",
        "name": "Living",
        "qualified": "a Living"
      },
      "routes": []
    }
  }
}
